General Functionality Update
- Added more M- keybindings.
- Installation will now use the base layer instead of a package list to
  install the base system.
- Made sure users will actually see the installation screen on first start

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,17 @@
 .tutor
 *.elc
 docset*
-elpa/*
-ycmd-*/
-auto-save-list/*
-history
-recentf
-tramp
+/elpa/*
+/ycmd/
+/auto-save-list/*
+/history
+/recentf
+/tramp
 .stfolder
 .cask/*
 .DS_Store
-\.*.el
 \.*.elc
 /projectile-bookmarks.eld
+/anaconda-mode
+/.python-environments
+/semanticdb
