--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,18 @@
 .tutor
 *.elc
 docset*
-/elpa/*
-/ycmd/
-/auto-save-list/*
-/history
-/recentf
-/tramp
+elpa/*
+deps/*
+auto-save-list/*
+history
+recentf
+tramp
 .stfolder
 .cask/*
 .DS_Store
 \.*.elc
-/projectile-bookmarks.eld
-/anaconda-mode
-/.python-environments
-/semanticdb
+projectile-bookmarks.eld
+anaconda-mode
+.python-environments
+semanticdb
+config/custom.el
